--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,20 @@ body{
     padding:30px 0; 
 }
 
-.todo-list .container{
+.container{
     max-width: 1200px;
     margin: 0 auto;
 }
 
-h1{
+h1,
+h2{
     margin-bottom: 30px;
     color: rgb(99, 62, 116);
 }
 
 
-.tasks{
+.tasks,
+.buttons{
     margin-bottom: 20px;
     display: flex;
     gap: 10px;
@@ -41,6 +43,14 @@ h1{
     color: white;
     border: 0;
     border-radius: 4px;
+    transition: all linear 0.3s;
+}
+
+.btn:hover{
+    transform: rotate(1.1);
+    background-color: #EEE;
+    color: rgb(99, 62, 116);
+    border: 1px solid rgb(99, 62, 116);
 }
 
 input{
@@ -57,4 +67,23 @@ ul li{
     margin-bottom: 5px;
     margin-left: 20px;
 
+}
+
+/*  */
+.tasks-counter{
+    padding: 10px 0;
+}
+
+.count{
+    width: 60px;
+    height: 60px;
+    border: 1px solid rgb(99, 62, 116);
+    color: rgb(99, 62, 116);
+    background-color: #EEE;
+    border-radius: 4px;
+    font-size: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
