--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: circle;
+    list-style:none;
 }
 
 body{
@@ -65,11 +65,59 @@ ul li{
     font-size: 16px;
     color: rgb(99, 62, 116);
     margin-bottom: 5px;
-    margin-left: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    width: 400px;
+} 
 
+.d-flex{
+    display: flex;
+    gap: 8px;
+    align-items: center;
 }
 
-/*  */
+li span {
+    pointer-events: none;
+}
+
+li::before{
+    content: '';
+    width: 24px;
+    font-size: 25px;
+    color: rgb(99, 62, 116);
+    border: 1px solid rgb(99, 62, 116);
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+li.checked::before {
+content: '✓';
+}
+
+
+li span {
+    color: rgb(99, 62, 116);
+    border: 1px solid rgb(99, 62, 116);
+    background-color: rgb(239, 144, 65);
+    display: flex;
+    position: absolute;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+} 
+
+/* counter */
 .tasks-counter{
     padding: 10px 0;
 }
@@ -87,3 +135,4 @@ ul li{
     justify-content: center;
     align-items: center;
 }
+
